--- a/index.html
+++ b/index.html
@@ -44,19 +44,36 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
     }
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel1 { background-image:url(https://media.licdn.com/dms/image/v2/C5612AQGCZClkXWnIwA/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1634348575866?e=2147483647&v=beta&t=mMnYQiCUtoGY1biEMp0ivEnQCW1Lcp_rZjmH8G7zWHI); }
+    .panel2 { background-image:url(https://images.squarespace-cdn.com/content/v1/5d72bfd58cd4bf332c64cacd/1613411995205-QG05WDGB1NF2AT3OCGTH/image-asset.jpeg?format=1500w); }
+    .panel3 { background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRshccKYd7PLHFu_NnyQSu_PkMRASkg5m-Ipw&s); }
+    .panel4 { background-image:url(https://media.licdn.com/dms/image/v2/D4D12AQGNVLU6cbfwNA/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1728904809763?e=2147483647&v=beta&t=sVSZOTgUbgeaBzSSspQUbpcvxLbXHcddnDDt9WEzNs4); }
+    .panel5 { background-image:url(https://cdn.jwplayer.com/v2/media/uurWR9nR/poster.jpg?width=720); }
 
     /* Flex Children */
     .panel > * {
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .panel > *:first-child { transform: translateX(-100%); }
+    .panel.open-active > *:first-child { transform: translateX(0); }
+    .panel > *:last-child { transform: translateX(100%); }
+    .panel.open-active > *:last-child { transform: translateX(0); }
+    .panel:hover{
+        opacity: 0.5;
     }
 
     .panel p {
@@ -71,6 +88,7 @@
     }
 
     .panel.open {
+        flex: 5;
       font-size: 40px;
     }
 
@@ -79,34 +97,48 @@
 
   <div class="panels">
     <div class="panel panel1">
-      <p>Hey</p>
-      <p>Let's</p>
-      <p>Dance</p>
+      <p>Love</p>
+      <p>This</p>
+      <p>Program</p>
     </div>
     <div class="panel panel2">
-      <p>Give</p>
-      <p>Take</p>
-      <p>Receive</p>
+      <p>Coding</p>
+      <p>Is</p>
+      <p>Cool</p>
     </div>
     <div class="panel panel3">
-      <p>Experience</p>
-      <p>It</p>
-      <p>Today</p>
+      <p>See</p>
+      <p>My</p>
+      <p>Progress</p>
     </div>
     <div class="panel panel4">
-      <p>Give</p>
-      <p>All</p>
-      <p>You can</p>
+      <p>Learned</p>
+      <p>Flex</p>
+      <p>Box</p>
     </div>
     <div class="panel panel5">
-      <p>Life</p>
-      <p>In</p>
-      <p>Motion</p>
+      <p>My</p>
+      <p>Gallery</p>
+      <p>Rocks!</p>
     </div>
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
 
+    function toggleOpen(){
+        this.classList.toggle('open');
+    }
+
+    function toggleActive(e){
+        if (e.propertyName.includes('flex')){
+            console.log("hi");
+          this.classList.toggle('open-active');
+        }
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
 
 
